# Project-Q-30-Days-Challenge

./: .gitignore  README.md  package-lock.json
Mini_Project_2/quantum-platform-enterprise/backend/: .env  fix.py  fix_db_to_sqlite.py  generate_circuits.py  init_db.py  main.py  pyproject.toml  quantum_db.sqlite3  requirements.txt
Mini_Project_2/quantum-platform-enterprise/backend/analytics/events/: subscribers.py
Mini_Project_2/quantum-platform-enterprise/backend/analytics/metrics/: prometheus.py  tracing.py
Mini_Project_2/quantum-platform-enterprise/backend/analytics/services/: overview_service.py
Mini_Project_2/quantum-platform-enterprise/backend/api/: deps.py
Mini_Project_2/quantum-platform-enterprise/backend/core/: events.py  state_machine.py
Mini_Project_2/quantum-platform-enterprise/backend/core/config/: settings.py
Mini_Project_2/quantum-platform-enterprise/backend/core/exceptions/: base.py
Mini_Project_2/quantum-platform-enterprise/backend/core/logging/: json_logger.py
Mini_Project_2/quantum-platform-enterprise/backend/core/middleware/: security.py  (+1 more)
Mini_Project_2/quantum-platform-enterprise/backend/database/: session.py
Mini_Project_2/quantum-platform-enterprise/backend/models/: analytics.py  audit.py  execution_history.py  experiment.py  user.py
Mini_Project_2/quantum-platform-enterprise/backend/repositories/: base.py  experiment_repo.py  user_repo.py
Mini_Project_2/quantum-platform-enterprise/backend/schemas/: experiment.py  user.py
Mini_Project_2/quantum-platform-enterprise/backend/services/: auth_service.py  experiment_service.py
(+98 files in other folders)
