[tool.poetry]
name = "quantum-platform-enterprise"
version = "0.1.0"
description = "Enterprise Quantum Platform"
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
alembic = "^1.11.0"
asyncpg = "^0.28.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
prometheus-client = "^0.17.0"
qiskit = "^1.0.0"
qiskit-aer = "^0.14.0"
qiskit-ibm-runtime = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
ruff = "^0.0.280"
mypy = "^1.4.1"
bandit = "^1.7.5"
safety = "^2.3.5"

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I", "N", "UP", "S"]
ignore = []

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
strict = True
ignore_missing_imports = True
